--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-# Core Django
+# Core Django atan
 Django>=5.0,<6.1
 djangorestframework>=3.15
 django-cors-headers>=4.3
@@ -6,7 +6,7 @@ django-cors-headers>=4.3
 # JWT Authentication
 djangorestframework-simplejwt>=5.3
 
-# LiveKit token generation (server-side only)
+# LiveKit token generation 
 livekit>=0.11
 
 # Environment variables
